<resources>
    <string name="app_name">Muvi</string>

    <string name="add_to_wishlist">add to wishlist</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Shows</string>
    <string name="my_movie">My Movie</string>
    <string name="my_tv_show">My Tv Shows</string>
    <string name="more_list">see all</string>
    <string name="watch_now">watch now</string>
    <string name="sample_text">loading…</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="movies">Movies</string>
    <string name="sample_title">title loading…</string>
    <string name="overview">Overview</string>
    <string name="artist">Artist</string>
    <string name="watchlist">Watchlist</string>
    <string name="play_trailer">play trailer</string>
    <string name="change_to_other_language">Change to other language</string>
    <string name="release_date">Release : %s</string>
    <string name="rating">Rating : %s</string>
    <string name="genre">Genre : </string>
    <string name="data_has_exist">Data has been existing!</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="added_to_favorite">Added to favorite!</string>
    <string name="info">Information</string>
    <string name="sure_to_close">Sure to close this app?</string>
    <string name="yes_quit">yes, close</string>
    <string name="no_quit">no</string>
    <string name="sure_to_unfavorite">Sure to unfavorite?</string>
    <string name="tvshow_poster">tvshow poster</string>
    <string name="search">Search</string>
    <string name="search_tvshow">Search Tv Show</string>
    <string name="search_movie">Search Movie</string>
    <string name="no_data">NO DATA</string>
    <string name="my_favorite">My Favorites</string>
    <string name="notif_muvi_daily_title">Muvi App</string>
    <string name="notif_muvi_daily_content">What\'s new today? Check it out!</string>
    <string name="notif_muvi_release_title">Today Release</string>
    <string name="new_movies">New Movies : </string>
    <string name="today_release">Today Release</string>

    <string name="key_reminder_daily">key_reminder_daily</string>
    <string name="key_reminder_release">key_reminder_release</string>
    <string name="notif_me_daily">Notif me to open app daily</string>
    <string name="notif_me_release">What\'s release today?</string>
    <string name="notif_me_daily_summary">Notification to open app daily at 7pm</string>
    <string name="notif_me_release_summary">Notification movie release daily at 8pm</string>
    <string name="settings">Settings</string>

</resources>
