<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"/>
    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_setting_language"
            android:title="@string/change_to_other_language"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_setting_other"
            android:title="@string/settings"
            app:showAsAction="never"/>
    </group>
</menu>