<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="16dp"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/movielist_imgPoster"
        android:layout_width="124dp"
        android:layout_height="150dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/movielist_tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movielist_tvRate"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_star_16dp"
            android:text="@string/sample_text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/movielist_tvRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_text" />

        <Button
            android:id="@+id/movielist_btnWishlist"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:drawableStart="@drawable/ic_bookmark_border_white_24dp"
            android:drawablePadding="4dp"
            android:padding="8dp"
            android:text="@string/add_to_wishlist"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>