<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fav_movielist_imgPoster"
            android:layout_width="124dp"
            android:layout_height="150dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitCenter" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/fav_movielist_tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fav_movielist_tvRate"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_star_16dp"
                android:text="@string/sample_text"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fav_movielist_tvTitle" />

            <TextView
                android:id="@+id/fav_movielist_tvRelease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fav_movielist_tvRate" />

            <Button
                android:id="@+id/fav_movielist_btnUnfavorite"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/unfavorite"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>